<resources>
<!--    <string name="app_name">沙发渔霸钓鱼</string>-->
    <!--<string name="app_name">钓鱼-在线钓活鱼</string>-->
    <!--<string name="app_name">钓鱼-沙发渔霸出品</string>-->
    <!--<string name="app_name">远程钓鱼</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="free_finsh_pond">自由钓场</string>
    <string name="fast_fish">快速开钓</string>
    <string name="go_follow">前去围观</string>
    <string name="rest_time">剩余时长</string>
    <string name="time_choice">选择时长套餐</string>
    <string name="disacount">首充8折优惠</string>
    <string name="save_money">已为您省下</string>
    <string name="real_pay_money">实际支付：</string>
    <string name="pay_confirm">确认购买</string>
    <string name="fishery">渔场</string>
    <string name="attention">关注</string>
    <string name="attention1">钓友</string>
    <string name="resend">重新发送</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="task">做任务 赚渔币</string>
    <string name="exchange">兑换</string>
    <string name="time_eschange">时长兑换</string>
    <string name="coin_task">兑换好礼</string>
    <string name="more_goods">更多物品</string>
    <string name="resend_d">重新发送%d</string>
    <string name="please_enter_the_correct_mobile_number">*请输入正确手机号码</string>
    <string name="please_enter_verification_code">*请短信输入验证码</string>
    <string name="mobile_phone_IMEI_acquisition_failed">*手机IMEI获取失败</string>
    <string name="verification_code_sent_to">验证码已发送至%s</string>
    <string name="login_failed">*登陆失败</string>
    <string name="bind_phone_number">绑定手机号</string>
    <string name="press_again_exit">再按一次退出</string>

    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="sign_in">签到</string>
    <string name="like">点赞</string>
    <string name="fen_si">粉丝</string>
    <string name="remaining_time">剩余时长</string>
    <string name="my_fishing_coin">我的渔币</string>
    <string name="invite_friends">邀请好友</string>
    <string name="give_a_good_comment">给个好评</string>
    <string name="help_center">帮助中心</string>
    <string name="earn_money">赚币</string>
    <string name="free_gift">免费时长</string>
    <string name="fishing_number">钓手号：%s</string>
    <string name="hour">%s小时</string>
    <string name="personal_information">个人信息</string>
    <string name="clearing">正在清除</string>
    <string name="cleared_successfully">清除成功</string>
    <string name="redemption_record">兑换记录</string>
    <string name="fish_coin_record">渔币记录</string>
    <string name="video_load">正在进入钓台，请稍候..</string>
    <string name="charge">充值</string>
    <string name="my_charge">我的时长</string>
    <string name="buy_record">购买记录</string>
    <string name="time_record">时长记录</string>
    <string name="failed_to_get_permission">获取权限失败</string>
    <string name="pay_result_callback_msg">微信支付结果：%s</string>
    <string name="app_tip">支付结果</string>
    <string name="billBoard">榜单</string>
    <string name="fish_most">钓鱼最多</string>
    <string name="fish_fast">钓鱼最快</string>
    <string name="genuine_binding">正在绑定</string>
    <string name="not_find_wechat_should">当前手机未找到微信</string>
    <string name="failed_to_get_verification_token">获取验证令牌失败</string>
    <string name="please_choose_fishing_age">请选择钓龄</string>
    <string name="the_client_is_not_installed_on_the_phone">手机未安装该客户端</string>
    <string name="fish_num">条数</string>
    <string name="stars">全民星榜</string>
    <string name="fish_speed">速度</string>
    <string name="recharge_record">充值记录</string>
    <string name="service_vip">会员服务协议</string>
    <string name="service_agreement">服务协议</string>
    <string name="about_us">关于我们</string>
    <string name="unable_to_find_app_store">无法找到应用商店</string>
    <string name="sign_in_rules">签到规则</string>
    <string name="follow">关注</string>
    <string name="fans">粉丝</string>
    <string name="duration_voucher">时长兑换券</string>
    <string name="fishing_coin_used">所用渔币：</string>
    <string name="confirm_exchange">确认兑换</string>
    <string name="get_coiin">获得渔币</string>
    <string name="going_onlookers"><![CDATA[前去围观 >]]></string>
    <string name="you_have_not_yet_exchanged_records">你还没有兑换记录！</string>
    <string name="attention_search">查找</string>
    <string name="user_help">钓鱼手册</string>
    <string name="mall">渔币商城</string>
    <string name="share_share">晒一晒</string>
    <string name="fish_go_in">开钓</string>
    <string name="fish_go_follow">围观</string>
    <string name="fish_guide_lean_more">再学一遍</string>

    <!--<string name="chat_content">%1$s,%2$s</string>-->

    <string name="chat_content"><Data><![CDATA[<font color="#FE7815">%1$s</font><font color="#ffffff">%2$s</font>]]></Data></string>
    <string name="fish_direct">直接开钓</string>
    <string name="fish_get">渔获</string>
</resources>
