<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/srl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <com.scwang.smartrefresh.header.MaterialHeader
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_margin"
                android:layout_marginRight="@dimen/padding_margin"
                app:cardCornerRadius="5dp">


                <cn.bingoogolapple.bgabanner.BGABanner
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitXY"
                    app:banner_aspectRatio="2.5"
                    app:banner_pageChangeDuration="1500"
                    app:banner_pointContainerBackground="@android:color/transparent"
                    app:banner_pointDrawable="@android:color/transparent" />
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="11dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:id="@+id/ll_fast_fishing"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="43dp"
                            android:layout_height="43dp"
                            android:layout_marginRight="@dimen/dp_15"
                            android:src="@drawable/sy_kaidiao_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fast_fish"
                            android:textColor="@color/font_black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:id="@+id/ll_go_follow"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="43dp"
                            android:layout_height="43dp"
                            android:layout_marginRight="@dimen/dp_15"
                            android:src="@drawable/sy_weiguan_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/go_follow"
                            android:textColor="@color/font_black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_margin"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="3dp"
                    android:layout_height="12dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/theme_yellow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free_finsh_pond"
                    android:textColor="@color/font_black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_fishPond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</com.scwang.smartrefresh.layout.SmartRefreshLayout>