<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/dh_bg"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_40"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="累计钓鱼"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_fishers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    tools:text="28条" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_40"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_coiin"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView

                    android:id="@+id/tv_get_coin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    tools:text="20000" />
            </LinearLayout>

            <!--<ImageView-->
            <!--android:layout_width="120dp"-->
            <!--android:layout_height="120dp"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:src="@drawable/dh_qbg" />-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="可用渔币"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/mfc_money_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginBottom="18dp"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    tools:text="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="渔币记录"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="gone" />


            </LinearLayout>


        </RelativeLayout>


        <include layout="@layout/line_gray_wide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_margin"
            android:paddingRight="@dimen/padding_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="32dp"
                    android:layout_height="1dp"
                    android:background="@color/theme_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="17dp"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginBottom="17dp"
                    android:text="@string/coin_task"
                    android:textColor="#ff333333"
                    android:textSize="14sp" />

                <View
                    android:layout_width="32dp"
                    android:layout_height="1dp"
                    android:background="@color/theme_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dp_15">

                <LinearLayout
                    android:layout_width="105dp"
                    android:layout_height="133dp"
                    android:background="@drawable/dh_dhjbg"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="81dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="@dimen/dp_15"
                        android:background="@drawable/dh_dhj"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp_6"
                            android:gravity="center"
                            android:text="@string/time_eschange"
                            android:textColor="@color/white"
                            android:textSize="9sp" />

                        <TextView
                            android:id="@+id/tv_exchange_type_one"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="1h/1000"
                            android:textColor="@color/white"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_exchange_one"
                        android:layout_width="75dp"
                        android:layout_height="25dp"
                        android:background="@drawable/dh_button"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/exchange"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_15" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="105dp"
                    android:layout_height="133dp"
                    android:layout_marginLeft="@dimen/padding_margin"
                    android:layout_marginRight="@dimen/padding_margin"
                    android:background="@drawable/dh_dhjbg"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="81dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="@dimen/dp_15"
                        android:background="@drawable/dh_dhj"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp_6"
                            android:gravity="center"
                            android:text="@string/time_eschange"
                            android:textColor="@color/white"
                            android:textSize="9sp" />

                        <TextView
                            android:id="@+id/tv_exchange_type_two"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="1h/1000"
                            android:textColor="@color/white"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_exchange_two"
                        android:layout_width="75dp"
                        android:layout_height="25dp"
                        android:background="@drawable/dh_button"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/exchange"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_15" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="105dp"
                    android:layout_height="133dp"
                    android:background="@drawable/dh_dhjbg"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="81dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="@dimen/dp_15"
                        android:background="@drawable/dh_dhj"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_exchange_type_three"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/more_goods"
                            android:textColor="@color/white"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_exchange_three"
                        android:layout_width="75dp"
                        android:layout_height="25dp"
                        android:background="@drawable/dh_button"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/exchange"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_15" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <include layout="@layout/line_gray_wide" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="32dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/theme_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="15dp"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginBottom="15dp"
                android:text="@string/task"
                android:textColor="#ff333333"
                android:textSize="14sp" />

            <View
                android:layout_width="32dp"
                android:layout_height="1dp"
                android:background="@color/theme_gray" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rc_coin_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>